Simplify debugger prompt